# Hybrid-Movie-Recommendation-System-main

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  collaborative.py  content_based.py  data_preprocessing.py  demo.py  hybrid.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  streamlit_app.py  test_system.py  ui.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md
